[gd_scene load_steps=53 format=2]

[ext_resource path="res://arrows/bottomright.png" type="Texture" id=1]
[ext_resource path="res://scripts/state_control.gd" type="Script" id=2]
[ext_resource path="res://arrows/right.png" type="Texture" id=3]
[ext_resource path="res://generic_state.tscn" type="PackedScene" id=4]
[ext_resource path="res://arrows/topright.png" type="Texture" id=5]
[ext_resource path="res://Assets/StickFig-Sheet.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "state_b1",
"speed": 15.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "state_a1",
"speed": 15.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "state_a3",
"speed": 15.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "state_a0",
"speed": 15.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "state_b2",
"speed": 15.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "state_b0",
"speed": 15.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "state_a2",
"speed": 15.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 125, 501 )
scale = Vector2( 1.6, 1.6 )
frames = SubResource( 46 )
animation = "Idle"
playing = true

[node name="state_a" type="Node2D" parent="."]

[node name="a0" parent="state_a" instance=ExtResource( 4 )]
position = Vector2( 100, 50 )
state_duration = 0.467

[node name="a1" parent="state_a" instance=ExtResource( 4 )]
position = Vector2( 450, 50 )
state_duration = 0.4

[node name="a2" parent="state_a" instance=ExtResource( 4 )]
position = Vector2( 450, 200 )
state_duration = 0.4

[node name="a3" parent="state_a" instance=ExtResource( 4 )]
position = Vector2( 800, 50 )
state_duration = 0.4

[node name="state_b" type="Node2D" parent="."]

[node name="b0" parent="state_b" instance=ExtResource( 4 )]
position = Vector2( 100, 350 )
state_duration = 0.467

[node name="b1" parent="state_b" instance=ExtResource( 4 )]
position = Vector2( 450, 350 )
state_duration = 0.4

[node name="b2" parent="state_b" instance=ExtResource( 4 )]
position = Vector2( 800, 350 )
state_duration = 0.4

[node name="arrows" type="Node2D" parent="."]

[node name="a0_a1_arrow" type="Sprite" parent="arrows"]
position = Vector2( 275, 50 )
scale = Vector2( 0.750127, 0.642739 )
texture = ExtResource( 3 )

[node name="a0_a2_arrow" type="Sprite" parent="arrows"]
position = Vector2( 275, 150 )
scale = Vector2( 0.985008, 0.538025 )
texture = ExtResource( 1 )

[node name="a2_b2_arrow" type="Sprite" parent="arrows"]
position = Vector2( 625, 250 )
scale = Vector2( 0.985008, 0.538025 )
texture = ExtResource( 1 )

[node name="a1_a3_arrow" type="Sprite" parent="arrows"]
position = Vector2( 625, 50 )
scale = Vector2( 0.750127, 0.642739 )
texture = ExtResource( 3 )

[node name="a2_a3_arrow" type="Sprite" parent="arrows"]
position = Vector2( 625, 150 )
scale = Vector2( 0.985008, 0.538025 )
texture = ExtResource( 5 )

[node name="b0_b1_arrow" type="Sprite" parent="arrows"]
position = Vector2( 275, 350 )
scale = Vector2( 0.750127, 0.642739 )
texture = ExtResource( 3 )

[node name="b1_b2_arrow" type="Sprite" parent="arrows"]
position = Vector2( 625, 350 )
scale = Vector2( 0.750127, 0.642739 )
texture = ExtResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
